Create movies list in HTML and append all movies with JS. Add search

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Livvic", "Arial", sans-serif;
+  font-family: "Rubik", "Arial", sans-serif;
 }
 
 img {
